# md_reader

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  lint.yml
src/: App.jsx  App.tsx  file-icons-js.d.ts  jest.config.js  main.tsx  styles.css  tauriApi.js  tauriApi.ts
src-tauri/: Cargo.toml  tauri.conf.json  testt.md
src-tauri/src/: main.rs  main_test.rs
src/components/: App.tsx  Example.jsx  Form.jsx
src/components/reader/: Reader.jsx  Reader.tsx  styles.css  utils.js  utils.ts
src/components/sideBar/: BurgerIcon.tsx  File.tsx  MdIcon.tsx  SideBar.jsx  SideBar.tsx  styles.css
src/test/: ReaderUtils.test.ts  tauriApi.test.ts
src/utils/: index.test.ts  tauriApi.ts  utils.ts
test/: tauriApi.test.ts
